--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -153,10 +153,10 @@ SETUP_PROJECT()
 SET (ROBOPTIM_DO_NOT_CHECK_ALLOCATION TRUE CACHE BOOL
   "Do not check dynamic allocation of Eigen matrices")
 IF(ROBOPTIM_DO_NOT_CHECK_ALLOCATION)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DROBOPTIM_DO_NOT_CHECK_ALLOCATION")
+  ADD_DEFINITIONS(-DROBOPTIM_DO_NOT_CHECK_ALLOCATION)
   PKG_CONFIG_APPEND_CFLAGS (-DROBOPTIM_DO_NOT_CHECK_ALLOCATION)
 ELSE()
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DEIGEN_RUNTIME_NO_MALLOC")
+  ADD_DEFINITIONS(-DEIGEN_RUNTIME_NO_MALLOC)
   PKG_CONFIG_APPEND_CFLAGS(-DEIGEN_RUNTIME_NO_MALLOC)
 ENDIF()
 
@@ -173,7 +173,8 @@ SET(ROBOPTIM_PRECOMPILE_DENSE_SPARSE FALSE CACHE BOOL
   "Precompile code for dense and sparse matrices (C++11 required)")
 IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE)
   IF(USE_CXX11)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DROBOPTIM_PRECOMPILED_DENSE_SPARSE -std=c++11")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
+    ADD_DEFINITIONS(-DROBOPTIM_PRECOMPILED_DENSE_SPARSE)
     PKG_CONFIG_APPEND_CFLAGS(-DROBOPTIM_PRECOMPILED_DENSE_SPARSE)
   ELSE()
     MESSAGE(WARNING "C++11 is required for explicit template instantiation")
@@ -181,7 +182,7 @@ IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE)
 ENDIF()
 
 IF(MSVC)
-  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DBOOST_LEXICAL_CAST_ASSUME_C_LOCALE")
+  ADD_DEFINITIONS(-DBOOST_LEXICAL_CAST_ASSUME_C_LOCALE)
   PKG_CONFIG_APPEND_CFLAGS (-DBOOST_LEXICAL_CAST_ASSUME_C_LOCALE)
 ENDIF()
 
@@ -236,7 +237,7 @@ IF(NOT (STORAGE_ORDER STREQUAL "ColMajor" OR STORAGE_ORDER STREQUAL "RowMajor"))
   MESSAGE(FATAL_ERROR "Storage order should be either ColMajor or RowMajor.")
 ENDIF()
 
-SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -DROBOPTIM_STORAGE_ORDER=${STORAGE_ORDER}")
+ADD_DEFINITIONS(-DROBOPTIM_STORAGE_ORDER=${STORAGE_ORDER})
 PKG_CONFIG_APPEND_CFLAGS (-DROBOPTIM_STORAGE_ORDER=${STORAGE_ORDER})
 
 OPTION(DISABLE_TESTS "Disable test programs" OFF)
