tests/CMakeLists.txt: fix tests environment variables

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -55,11 +55,10 @@ MACRO(ROBOPTIM_CORE_TEST NAME)
   TARGET_LINK_LIBRARIES(${NAME} ${Boost_LIBRARIES})
 
   # Make sure the plugins will be found.
+  # Note: this does not append the environment variables!
   SET_PROPERTY(
     TEST ${NAME} PROPERTY ENVIRONMENT
-    "LTDL_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LTDL_LIBRARY_PATH}")
-  SET_PROPERTY(
-    TEST ${NAME} PROPERTY ENVIRONMENT
+    "LTDL_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LTDL_LIBRARY_PATH} "
     "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LD_LIBRARY_PATH}")
 ENDMACRO(ROBOPTIM_CORE_TEST)
 
