CMakeLists.txt: set minimum version to 2.8.12

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -46,8 +46,7 @@ ENDIF()
 
 # Main library.
 ADD_LIBRARY(roboptim-core SHARED ${HEADERS} ${ROBOPTIM_CORE_SRC})
-SET_TARGET_PROPERTIES(roboptim-core PROPERTIES
-  COMPILE_DEFINITIONS "roboptim_core_EXPORTS")
+TARGET_COMPILE_OPTIONS(roboptim-core PUBLIC "-Droboptim_core_EXPORTS")
 PKG_CONFIG_USE_DEPENDENCY(roboptim-core eigen3)
 PKG_CONFIG_USE_DEPENDENCY(roboptim-core liblog4cxx)
 
