Support for ltdl with pkgconfig and proper handling of the debug postfix throughout the project

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,8 +14,7 @@
 # along with roboptim-core.  If not, see <http://www.gnu.org/licenses/>.
 
 # Requires at least CMake 2.8 to configure the package.
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8)
-
+CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
 INCLUDE(cmake/base.cmake)
 INCLUDE(cmake/boost.cmake)
 INCLUDE(cmake/lapack.cmake)
@@ -25,7 +24,7 @@ INCLUDE(cmake/eigen.cmake)
 SET(PROJECT_NAME roboptim-core)
 SET(PROJECT_DESCRIPTION "RobOptim Core")
 SET(PROJECT_URL "http://github.com/roboptim/roboptim-core")
-set(PROJECT_DEBUG_POSTFIX "_d")
+SET(PROJECT_DEBUG_POSTFIX "_d")
 
 # Use MathJax for Doxygen formulae
 SET(DOXYGEN_USE_MATHJAX "YES")
@@ -166,6 +165,12 @@ IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
   ENDIF()
 ENDIF()
 
+IF(PROJECT_DEBUG_POSTFIX)
+  SET(FLAG_POSTFIX -DROBOPTIM_DEBUG_POSTFIX="${PROJECT_DEBUG_POSTFIX}")
+  ADD_COMPILE_OPTIONS($<$<CONFIG:Debug>:${FLAG_POSTFIX}>)
+  PKG_CONFIG_APPEND_CFLAGS_DEBUG(${FLAG_POSTFIX})
+ENDIF()
+
 SET(USE_CXX11 FALSE CACHE BOOL "Whether to use C++11")
 
 SET(ROBOPTIM_PRECOMPILE_DENSE_SPARSE FALSE CACHE BOOL
@@ -198,14 +203,13 @@ PKG_CONFIG_APPEND_LIBS(roboptim-core)
 SET(BOOST_COMPONENTS date_time filesystem system unit_test_framework)
 SEARCH_FOR_BOOST()
 SEARCH_FOR_EIGEN("eigen3 >= 3.2.0")
-ADD_REQUIRED_DEPENDENCY("liblog4cxx >= 0.10.0")
+ADD_REQUIRED_DEPENDENCY("liblog4cxx >= 0.10.0" "liblog4cxx_d >= 0.10.0")
 
 # Libtool dynamic loading
 # This project does not use Libtool directly but still uses ltdl for
 # plug-in loading.
 IF(WIN32)
-  ADD_OPTIONAL_DEPENDENCY("ltdl")
-  include_directories(${LTDL_INCLUDEDIR})
+  ADD_OPTIONAL_DEPENDENCY("ltdl" "ltdl_d")
 ENDIF(WIN32)
 
 IF(NOT LTDL_FOUND)
