--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -73,8 +73,7 @@ ENDIF()
 IF(NOT LTDL_FOUND)
   TARGET_LINK_LIBRARIES(roboptim-core ltdl)
 ELSE()
-  TARGET_LINK_LIBRARIES(roboptim-core ${LTDL_LIBDIR}/ltdl.lib)
-  # PKG_CONFIG_USE_LINK_DEPENDENCY(roboptim-core ltdl)
+  PKG_CONFIG_USE_DEPENDENCY(roboptim-core ltdl)
 ENDIF(NOT LTDL_FOUND)
 
 SET_TARGET_PROPERTIES(roboptim-core PROPERTIES SOVERSION 3 VERSION 3.2.0)
@@ -138,6 +137,6 @@ ENDIF()
 INSTALL(TARGETS roboptim-core-plugin-dummy-td DESTINATION ${PLUGINDIR})
 
 IF(MSVC)
-  INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}.pdb" DESTINATION ${CMAKE_INSTALL_LIBDIR} CONFIGURATIONS Debug)
+  INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}${PROJECT_DEBUG_POSTFIX}.pdb" DESTINATION ${CMAKE_INSTALL_LIBDIR} CONFIGURATIONS Debug)
   INSTALL(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/Debug/" DESTINATION ${PLUGINDIR} CONFIGURATIONS Debug FILES_MATCHING PATTERN "${PROJECT_NAME}-plugin*.pdb")
 ENDIF()
