--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -33,7 +33,7 @@ ENDIF(WIN32)
 ADD_DEFINITIONS(-DBOOST_TEST_DYN_LINK -DBOOST_TEST_MAIN)
 
 # To locate built plug-in.
-ADD_DEFINITIONS(-DPLUGIN_PATH="${CMAKE_BINARY_DIR}/src")
+ADD_DEFINITIONS(-DPLUGIN_PATH="${CMAKE_BINARY_DIR}/src/${CMAKE_BUILD_TYPE}")
 ADD_DEFINITIONS(-DTESTS_DATA_DIR="${CMAKE_CURRENT_SOURCE_DIR}")
 
 # ROBOPTIM_CORE_TEST(NAME)
@@ -52,6 +52,11 @@ MACRO(ROBOPTIM_CORE_TEST NAME)
 
   TARGET_LINK_LIBRARIES(${NAME} roboptim-core)
   PKG_CONFIG_USE_DEPENDENCY(${NAME} liblog4cxx)
+  IF(NOT LTDL_FOUND)
+    TARGET_LINK_LIBRARIES(${NAME} ltdl)
+  ELSE()
+    PKG_CONFIG_USE_DEPENDENCY(${NAME} ltdl)
+  ENDIF(NOT LTDL_FOUND)
 
   # Link against Boost.
   TARGET_LINK_LIBRARIES(${NAME} ${Boost_LIBRARIES})
@@ -59,10 +64,8 @@ MACRO(ROBOPTIM_CORE_TEST NAME)
   # Make sure the plugins will be found.
   SET_PROPERTY(
     TEST ${NAME} PROPERTY ENVIRONMENT
-    "LTDL_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LTDL_LIBRARY_PATH}")
-  SET_PROPERTY(
-    TEST ${NAME} PROPERTY ENVIRONMENT
-    "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src:$ENV{LD_LIBRARY_PATH}")
+    "LTDL_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src/${CMAKE_BUILD_TYPE}:$ENV{LTDL_LIBRARY_PATH} "
+    "LD_LIBRARY_PATH=${CMAKE_BINARY_DIR}/src/${CMAKE_BUILD_TYPE}:$ENV{LD_LIBRARY_PATH}")
 ENDMACRO(ROBOPTIM_CORE_TEST)
 
 # Basic types.
