ResultWithWarnings: use passthrough inheritance rather than typedef
A typedef breaks backward compatibility with existing visitor for
solver results.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -25,6 +25,7 @@ SET(ROBOPTIM_CORE_SRC
   generic-solver.cc
   indent.cc
   result.cc
+  result-with-warnings.cc
   solver-error.cc
   solver-warning.cc
   solver.cc
