--- a/appveyor.yml
+++ b/appveyor.yml
@@ -2,6 +2,13 @@ version: 1.0.{build}
 branches:
   only:
     - dev
+
+configuration:
+- Debug
+
+platform:
+- x64
+
 os: Visual Studio 2015
 clone_folder: C:\devel-src\roboptim-core
 environment:
@@ -42,4 +49,4 @@ test_script:
 - cmd: >-
     cd %PROJECT_SOURCE_DIR%/build
 
-    ctest
+    ctest --build-config %CONFIGURATION% --exclude-regex example
