[Win32] Add path to boost libs

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -54,6 +54,9 @@ PKG_CONFIG_USE_DEPENDENCY(roboptim-core liblog4cxx)
 SET(ROBOPTIM_API_BOOST_LIBRARIES date_time system filesystem)
 IF(NOT WIN32)
   PKG_CONFIG_APPEND_BOOST_LIBS(${ROBOPTIM_API_BOOST_LIBRARIES})
+ELSE(NOT WIN32)
+  # Only add the path
+  PKG_CONFIG_APPEND_BOOST_LIBS()
 ENDIF(NOT WIN32)
 
 IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE)
