solver-factory.hxx: ensure preprocessor definition is treated as string
This should work for both roboptim-core and software depending on it.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -170,7 +170,7 @@ IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
 ENDIF()
 
 IF(PROJECT_DEBUG_POSTFIX)
-  SET(FLAG_POSTFIX -DROBOPTIM_DEBUG_POSTFIX="${PROJECT_DEBUG_POSTFIX}")
+  SET(FLAG_POSTFIX -DROBOPTIM_DEBUG_POSTFIX=${PROJECT_DEBUG_POSTFIX})
   ADD_COMPILE_OPTIONS($<$<CONFIG:Debug>:${FLAG_POSTFIX}>)
   PKG_CONFIG_APPEND_CFLAGS_DEBUG(${FLAG_POSTFIX})
 ENDIF()
