[Win32] Correct the install of the pdb file when compiling with nmake.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -144,6 +144,9 @@ IF(NOT APPLE)
 ENDIF()
 
 IF(MSVC)
-  INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/Debug/${PROJECT_NAME}${PROJECT_DEBUG_POSTFIX}.pdb" DESTINATION ${CMAKE_INSTALL_LIBDIR} CONFIGURATIONS Debug)
-  INSTALL(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/Debug/" DESTINATION ${PLUGINDIR} CONFIGURATIONS Debug FILES_MATCHING PATTERN "${PROJECT_NAME}-plugin*.pdb")
+  IF("${CMAKE_GENERATOR}" MATCHES "Visual Studio.*")
+    SET(DEBUG_FOLDER "Debug")
+  ENDIF("${CMAKE_GENERATOR}" MATCHES "Visual Studio.*")
+  INSTALL(FILES "${CMAKE_CURRENT_BINARY_DIR}/${DEBUG_FOLDER}/${PROJECT_NAME}${PROJECT_DEBUG_POSTFIX}.pdb" DESTINATION ${CMAKE_INSTALL_LIBDIR} CONFIGURATIONS Debug)
+  INSTALL(DIRECTORY "${CMAKE_CURRENT_BINARY_DIR}/${DEBUG_FOLDER}/" DESTINATION ${PLUGINDIR} CONFIGURATIONS Debug FILES_MATCHING PATTERN "${PROJECT_NAME}-plugin*.pdb")
 ENDIF()
