--- a/.travis.yml
+++ b/.travis.yml
@@ -33,12 +33,12 @@ script:
   - if [ "${COVERITY_SCAN_BRANCH}" != "1" ]; then ./.travis/run build; fi
 after_success:
   - ./.travis/run after_success
-  - codecov --gcov-root=/tmp/_ci/build
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then codecov --gcov-root=/tmp/_ci/build ; fi
 after_failure: ./.travis/run after_failure
 before_install:
   # Avoid bug on CI with OSX, see https://github.com/travis-ci/travis-ci/issues/8552
   - if [[ "$TRAVIS_OS_NAME" == "osx" ]]; then brew update ; fi
-  - pip install --user codecov
+  - if [[ "$TRAVIS_OS_NAME" == "linux" ]]; then pip install --user codecov ; fi
   - ./.travis/run  before_install
   - ./.travis/dependencies/eigen-${EIGEN_MAJOR}
 
