--- a/.gitmodules
+++ b/.gitmodules
@@ -3,7 +3,7 @@
 	url = git://github.com/roboptim/roboptim-shared-tests.git
 [submodule "cmake"]
 	path = cmake
-	url = git://github.com/jrl-umi3218/jrl-cmakemodules.git
+	url = https://github.com/jrl-umi3218/jrl-cmakemodules
 [submodule ".travis"]
 	path = .travis
 	url = git://github.com/jrl-umi3218/jrl-travis.git
