[cmake] CMakeLists.txt updated according to cmake.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -14,7 +14,14 @@
 # along with roboptim-core.  If not, see <http://www.gnu.org/licenses/>.
 
 # Requires at least CMake 2.8.12 to configure the package.
-CMAKE_MINIMUM_REQUIRED(VERSION 2.8.12)
+CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
+
+SET(PROJECT_NAME roboptim-core)
+SET(PROJECT_DESCRIPTION "RobOptim Core")
+SET(PROJECT_URL "http://github.com/roboptim/roboptim-core")
+SET(PROJECT_DEBUG_POSTFIX "_d")
++
+SET(CMAKE_CXX_STANDARD 98)
 
 INCLUDE(cmake/base.cmake)
 INCLUDE(cmake/boost.cmake)
@@ -23,10 +30,8 @@ INCLUDE(cmake/cpack.cmake)
 INCLUDE(cmake/eigen.cmake)
 INCLUDE(cmake/msvc-specific.cmake)
 
-SET(PROJECT_NAME roboptim-core)
-SET(PROJECT_DESCRIPTION "RobOptim Core")
-SET(PROJECT_URL "http://github.com/roboptim/roboptim-core")
-SET(PROJECT_DEBUG_POSTFIX "_d")
+compute_project_args(PROJECT_ARGS LANGUAGES CXX)
+project(${PROJECT_NAME} ${PROJECT_ARGS})
 
 # Use MathJax for Doxygen formulae
 SET(DOXYGEN_USE_MATHJAX "YES")
@@ -149,8 +154,6 @@ SET(HEADERS
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib-matrix.hh
   ${CMAKE_SOURCE_DIR}/include/roboptim/core/visualization/matplotlib.hh
   )
-
-SETUP_PROJECT()
 
 SET (ROBOPTIM_DO_NOT_CHECK_ALLOCATION TRUE CACHE BOOL
   "Do not check dynamic allocation of Eigen matrices")
