--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,7 +16,7 @@
 # Requires at least CMake 2.8.12 to configure the package.
 CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
 
-SET(CMAKE_CXX_STANDARD 98)
+SET(CMAKE_CXX_STANDARD 14)
 
 SET(PROJECT_NAME roboptim-core)
 SET(PROJECT_DESCRIPTION "RobOptim Core")
@@ -179,7 +179,7 @@ IF(PROJECT_DEBUG_POSTFIX)
   PKG_CONFIG_APPEND_CFLAGS_DEBUG(${FLAG_POSTFIX})
 ENDIF()
 
-SET(USE_CXX11 FALSE CACHE BOOL "Whether to use C++11")
+SET(USE_CXX11 TRUE CACHE BOOL "Whether to use C++11")
 
 SET(ROBOPTIM_PRECOMPILE_DENSE_SPARSE FALSE CACHE BOOL
   "Precompile code for dense and sparse matrices (C++11 required)")
