Uses CHECK_MINIMAL_CXX_STANDARD.

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,8 +16,6 @@
 # Requires at least CMake 2.8.12 to configure the package.
 CMAKE_MINIMUM_REQUIRED(VERSION 3.16)
 
-SET(CMAKE_CXX_STANDARD 14)
-
 SET(PROJECT_NAME roboptim-core)
 SET(PROJECT_DESCRIPTION "RobOptim Core")
 SET(PROJECT_URL "http://github.com/roboptim/roboptim-core")
@@ -34,6 +32,7 @@ INCLUDE(cmake/msvc-specific.cmake)
 compute_project_args(PROJECT_ARGS LANGUAGES CXX C)
 project(${PROJECT_NAME} ${PROJECT_ARGS})
 
+CHECK_MINIMAL_CXX_STANDARD(14)
 # Use MathJax for Doxygen formulae
 SET(DOXYGEN_USE_MATHJAX "YES")
 
@@ -179,18 +178,11 @@ IF(PROJECT_DEBUG_POSTFIX)
   PKG_CONFIG_APPEND_CFLAGS_DEBUG(${FLAG_POSTFIX})
 ENDIF()
 
-SET(USE_CXX11 TRUE CACHE BOOL "Whether to use C++11")
-
 SET(ROBOPTIM_PRECOMPILE_DENSE_SPARSE FALSE CACHE BOOL
   "Precompile code for dense and sparse matrices (C++11 required)")
 IF(ROBOPTIM_PRECOMPILE_DENSE_SPARSE)
-  IF(USE_CXX11)
-    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
-    ADD_DEFINITIONS(-DROBOPTIM_PRECOMPILED_DENSE_SPARSE)
-    PKG_CONFIG_APPEND_CFLAGS(-DROBOPTIM_PRECOMPILED_DENSE_SPARSE)
-  ELSE()
-    MESSAGE(WARNING "C++11 is required for explicit template instantiation")
-  ENDIF()
+  ADD_DEFINITIONS(-DROBOPTIM_PRECOMPILED_DENSE_SPARSE)
+  PKG_CONFIG_APPEND_CFLAGS(-DROBOPTIM_PRECOMPILED_DENSE_SPARSE)
 ENDIF()
 
 IF(MSVC)
